# bedrock-proxy-rs

./: .gitmodules  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
idl-gen/: Cargo.toml  build.rs
idl-gen/src/: lib.rs
src/: config.rs  connections.rs  ds_client.rs  handler.rs  lib.rs  ms_client.rs  route_manager.rs  shard_range.rs  shard_route.rs  tso.rs  utils.rs
test/: test.toml
