[package]
name = "bedrock-proxy-rs"
version = "0.1.0"
authors = ["Yanhao Mo <yanhaocs@gmail.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
once_cell = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = "0.4"
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
arc-swap = "1"
im = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap =  { version = "4", features = ["derive"] }
async_singleflight = "0.5"
dashmap = "5"
itertools = "0.11"

idl-gen = { path = "./idl-gen" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true    # set to false to disable debug info
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false